# daesim2-analysis

./: .gitignore  README.md  daesim2analysis.e139547166  daesim2analysis.e139549055  daesim2analysis.o137133878  daesim2analysis.o138152962  daesim2analysis.o139547166  environment.yml  requirements.txt  setup.cfg
notebooks/: FAST.py  FAST_sensitivity_analysis.py  FAST_sensitivity_analysis_parallel.py  Sobol_sensitivity_analysis.py  calibrate_PlantDev.py  experiment_example.py  model_run.py  sensitivity_analysis.py
parameters/: Fast1.json
results/Rutherglen_1971/: parametersFAST_results_Rutherglen_1971_paramset0001.nc  parametersFAST_results_Rutherglen_1971_paramset0002.nc  parametersFAST_results_Rutherglen_1971_paramset0003.nc  parametersFAST_results_Rutherglen_1971_paramset0004.nc  parametersFAST_results_Rutherglen_1971_paramset0005.nc  parametersFAST_results_Rutherglen_1971_paramset0006.nc  parametersFAST_results_Rutherglen_1971_paramset0007.nc  parametersFAST_results_Rutherglen_1971_paramset0008.nc  parametersFAST_results_Rutherglen_1971_paramset0009.nc  parametersFAST_results_Rutherglen_1971_paramset0010.nc  parametersFAST_results_Rutherglen_1971_paramset0011.nc  parametersFAST_results_Rutherglen_1971_paramset0012.nc  parametersFAST_results_Rutherglen_1971_paramset0013.nc  parametersFAST_results_Rutherglen_1971_paramset0014.nc  parametersFAST_results_Rutherglen_1971_paramset0015.nc  parametersFAST_results_Rutherglen_1971_paramset0016.nc  (+24 more)
scripts/: main.sh  pbs_run_FAST.sh  run_FAST.sh  run_FAST_sensitivity_analysis_parallel.sh
src/daesim2_analysis/: args.py  (+9 more)
(+111 files in other folders)
